--- a/aigou-product-service.yml
+++ b/aigou-product-service.yml
@@ -19,7 +19,7 @@ eureka:
       defaultZone: http://localhost:7001/eureka/
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.aigou.domain
+  type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
 ---
 server:
   port: 8003
@@ -38,5 +38,5 @@ eureka:
       defaultZone: http://localhost:7001/eureka/
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.aigou.domain
+  type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
     
