--- a/aigou-product-service.yml
+++ b/aigou-product-service.yml
@@ -17,6 +17,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka/
+feign:
+  hystrix:
+    enabled: true 
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
@@ -36,6 +39,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka/
+feign:
+  hystrix:
+    enabled: true 
 mybatis-plus:
   mapper-locations: classpath:cn/itsource/aigou/mapper/*Mapper.xml
   type-aliases-package: cn.itsource.aigou.domain,cn.itsource.aigou.query
